--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -4,6 +4,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: sticky;
+  top: 0;
 
   .nav_logo_wrap {
     img {
