--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -35,6 +35,7 @@
 
 .foot_wrap{
   width: 100vw;
+  height: 30em;
   padding: 0.4rem 10%;
   display: flex;
   justify-content: space-around;
@@ -53,7 +54,19 @@
   .foot_menu_wrap {
     display: flex;
     align-items: center;
+
     width: 40%;
     justify-content: space-around;
 }
+      ul {
+      list-style-type: none;
+      width: 65%;
+      display: flex;
+      align-items: center;
+      flex-direction: row;
+      justify-content: space-around;
+  
+}
+
+
 }
