--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -21,44 +21,50 @@
     width: 40%;
     justify-content: space-around;
 
-
     ul {
       list-style-type: none;
       width: 65%;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      
     }
   }
 }
 
-
-
-.foot_wrap{
+.foot_wrap {
   width: 100vw;
   height: 350pt;
-  padding: 0.4rem 10%;
-  display: grid;
-  grid-template-columns: 5fr 5fr 5fr;
-  grid-template-rows: 5fr 5fr;
-  justify-content: space-around;
-  padding: 5pt;
-  align-content: start;
-
-  place-items: center;
+  display: flex;
   position: fixed;
   background-color: pink;
   bottom: 0px;
-  border: 5pt solid black;
+  border: 5pt solid red;
 
-  .foot_menu_wrap {
-    display: flex;
-    align-items: center;
-    background-color: green;
-    width: 40%;
-    justify-content: space-evenly;
+  .foot_left_wrap {
+    flex:50%;
+   
+    background-color: purple;
+
+    img {
+      height: 10rem;
+      width: auto;
+    }
+  }
+
+  .foot_right_wrap {
+    background-color: yellow;
+    flex:50%;
+
+
+    .foot_menu_wrap {
+      display: grid;
+      width: 200pt;
+      grid-template-columns: 50pt 50pt 50pt 50pt 50pt;
+      grid-template-rows: 5fr 5fr;
+      align-items: center;
+      background-color: green;
+      width: 40%;
+      justify-content: space-evenly;
+    }
+  }
 }
-
-}
-
