--- a/styles/homepage-comps/slider.module.scss
+++ b/styles/homepage-comps/slider.module.scss
@@ -1,11 +1,12 @@
 .root_box {
     width: 22vw;
     height: 100%;
-    background-color: rgb(198, 255, 255);
+    background-color: #ffefe5;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
     align-content: center;
+    overflow: hidden;
 }
 
 @media only screen and (max-width: 1080px) {
