--- a/styles/homepage-comps/top-section.module.scss
+++ b/styles/homepage-comps/top-section.module.scss
@@ -1,22 +1,18 @@
-.container {
-    height: 93vh;
-}
-
 .landing_top_section {
     height: 93vh;
+    // border: 10px solid green;
 }
 
 .container {
+    height: 100%;
     display: flex;
     flex-flow: row wrap;
     align-items: center;
     justify-content: space-between;
-    background-color: lime;
 }
 
 .mid {
     flex-grow: 2;
-    background-color: wheat;
     height: 100%;
 
 }
@@ -24,7 +20,7 @@
 .vanta_container {
     width: 100%;
     height: 100%;
-    background-color: #2b2b2b;
+    background-color: #272626;
 }
 
 
