--- a/styles/homepage-comps/midsect.module.scss
+++ b/styles/homepage-comps/midsect.module.scss
@@ -15,7 +15,7 @@
 }
 
 .header {
-    border: 1px solid slateblue;
+    // border: 1px solid slateblue;
     padding: 2rem 1rem;
     text-align: center;
     font-size: clamp(1.2rem, 2.9vw - 0.1rem, 1.75rem);
