--- a/styles/homepage-comps/slider.module.scss
+++ b/styles/homepage-comps/slider.module.scss
@@ -1,12 +1,14 @@
 .root_box {
     width: 22vw;
     height: 100%;
-    background-color: #ffefe5;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
     align-content: center;
     overflow: hidden;
+    background-color: #20242B;
+    // opacity: 0.;
+
 }
 
 @media only screen and (max-width: 1080px) {
