--- a/styles/homepage-comps/top-section.module.scss
+++ b/styles/homepage-comps/top-section.module.scss
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Open+Sans:wght@800&display=swap');
+
 .landing_top_section {
     height: 93vh;
-    // border: 10px solid green;
 }
 
 .container {
@@ -9,18 +10,47 @@
     flex-flow: row wrap;
     align-items: center;
     justify-content: space-between;
+    background-color: #485461;
+    background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
 }
 
 .mid {
     flex-grow: 2;
     height: 100%;
-
+    position: relative;
 }
 
 .vanta_container {
     width: 100%;
     height: 100%;
-    background-color: #272626;
+}
+
+.hero_header {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    border: 1px dotted white;
+    color: #fff;
+    width: 94%;
+    text-align: left;
+    min-height: 80%;
+    font-family: 'Open Sans', sans-serif;
+    backdrop-filter: blur(16px) saturate(130%);
+    -webkit-backdrop-filter: blur(16px) saturate(130%);
+    background-color: rgba(36, 31, 36, 0.5);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+
+    .hero_text_wrap {
+        color: #e5e5e5;
+        color: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
+        font-size: clamp(1.5rem, 13.3vw - 4.3rem, 3.6rem);
+        line-height: 0.9;
+        font-weight: 800;
+        letter-spacing: -6px;
+        vertical-align: middle;
+    }
 }
 
 
