--- a/styles/homepage-comps/top-section.module.scss
+++ b/styles/homepage-comps/top-section.module.scss
@@ -27,24 +27,26 @@
 
 .hero_header {
     position: absolute;
-    top: 15%;
-    left: 50%;
-    transform: translate(-50%, 0);
-    border: 1px dotted white;
-    color: #fff;
-    width: 94%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    // transform: translate(-50%, 0);
     text-align: left;
-    min-height: 80%;
     font-family: 'Open Sans', sans-serif;
     backdrop-filter: blur(16px) saturate(130%);
     -webkit-backdrop-filter: blur(16px) saturate(130%);
     background-color: rgba(36, 31, 36, 0.5);
     border-radius: 12px;
-    border: 1px solid rgba(255, 255, 255, 0.125);
+    // border: 1px solid rgba(255, 255, 255, 0.125);
 
     .hero_text_wrap {
         color: #e5e5e5;
-        color: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
+        background: -webkit-linear-gradient(225deg, #b8c6db 0%, #f9fbff 74%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
         font-size: clamp(1.5rem, 13.3vw - 4.3rem, 3.6rem);
         line-height: 0.9;
         font-weight: 800;
@@ -52,6 +54,7 @@
         vertical-align: middle;
     }
 }
+
 
 
 @media only screen and (max-width: 1085px) {
@@ -64,3 +67,19 @@
         width: 100%;
     }
 }
+
+
+
+
+.btn_grad {
+    margin: 10px;
+    padding: 15px 30px;
+    text-align: center;
+    background-color: #28313b;
+    border-radius: 12px;
+    color: white;
+}
+
+
+// background-color: #b8c6db;
+// background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
