--- a/styles/homepage-comps/bottomsect.module.scss
+++ b/styles/homepage-comps/bottomsect.module.scss
@@ -11,7 +11,7 @@
     .foot_left_wrap {
       flex:40%;
     
-      /*background-color: purple;*/
+      //background-color: grey;
       background-color: #F0F8FF;
       //border: 5pt solid orange;
   
