--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -8,8 +8,8 @@
   top: 0;
   z-index: 20;
   // box-shadow: rgba(100, 100, 100, 0.1) 0px 4px 6px -1px, rgba(145, 145, 145, 0.06) 0px 2px 4px -1px;
-  // background-color: #F0F8FF;
-  background-color: #202428;
+  background-color: silver; //for blind people like me - GK
+  //background-color: #202428;
 
   &.active{
     background-color: red;
