--- a/styles/homepage-comps/top-section.module.scss
+++ b/styles/homepage-comps/top-section.module.scss
@@ -7,7 +7,7 @@
 .container {
     height: 100%;
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row;
     align-items: center;
     justify-content: space-between;
     background-color: #485461;
@@ -15,7 +15,7 @@
 }
 
 .mid {
-    flex-grow: 2;
+    flex-grow: 1;
     height: 100%;
     position: relative;
 }
@@ -33,37 +33,36 @@
     height: 100%;
     display: flex;
     align-items: center;
-    // transform: translate(-50%, 0);
-    text-align: left;
+
+    text-align: center;
     font-family: 'Open Sans', sans-serif;
-    backdrop-filter: blur(16px) saturate(130%);
-    -webkit-backdrop-filter: blur(16px) saturate(130%);
+    // backdrop-filter: blur(16px) saturate(130%);
+    // -webkit-backdrop-filter: blur(16px) saturate(130%);
     background-color: rgba(36, 31, 36, 0.5);
     border-radius: 12px;
-    // border: 1px solid rgba(255, 255, 255, 0.125);
+
 
     .hero_text_wrap {
+        margin: auto;
         color: #e5e5e5;
         background: -webkit-linear-gradient(225deg, #b8c6db 0%, #f9fbff 74%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-        font-size: clamp(1.5rem, 13.3vw - 4.3rem, 3.6rem);
+        font-size: clamp(1.8rem, 10.3vw - 3.4rem, 3.8rem);
         line-height: 0.9;
         font-weight: 800;
-        letter-spacing: -6px;
+        letter-spacing: -4px;
         vertical-align: middle;
     }
 }
 
 
 
-@media only screen and (max-width: 1085px) {
-    .container {
-        flex-direction: column;
-    }
+@media only screen and (max-width: 72rem) {
+
 
     .mid {
-        height: 31vh;
+        // height: 31vh;
         width: 100%;
     }
 }
