added search feature, integration not done yet

--- a/styles/search-page/search.module.scss
+++ b/styles/search-page/search.module.scss
@@ -6,3 +6,10 @@
       padding: 1%;
       // border: 2px solid red;
 }
+
+.searchBar{
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+}
