--- a/styles/userprofilecss/userprofile01.module.scss
+++ b/styles/userprofilecss/userprofile01.module.scss
@@ -1,17 +1,68 @@
 .profile_wrap{
     width: 100%;
-    height: 100%;
+    
     display: flex;
 
     .profile_left_wrap{
-        flex:30%;
-        border: 5pt solid orange;
+        flex: 30%;
+        //border: 5pt solid orange;
+   
+
+
+        .card1{
+            
+            .card {
+                //box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+                
+                //max-width: 100%;
+                margin: auto;
+                text-align: center;
+                font-family: arial;
+
+              }
+              
+              .title {
+                color: grey;
+                //font-size: 18px;
+              }
+              
+              button {
+                border: none;
+                outline: 0;
+                display: inline-block;
+                padding: 8px;
+                color: white;
+                background-color: #000;
+                text-align: center;
+                cursor: pointer;
+                width: 100%;
+                //font-size: 18px;
+              }
+              
+              a {
+                text-decoration: none;
+                //font-size: 22px;
+                color: black;
+              }
+              
+              button:hover, a:hover {
+                opacity: 0.7;
+              }
+
+              .linkystuff{
+                margin: 24px 0;
+              }
+
+              .img{
+  
+              }
+        }
 
     }
 
-    .profile_right_wrap{
-        flex:70%;
-        border: 5pt solid red;
+.profile_right_wrap{
+        flex: 70%;
+        border: 5pt solid white;
 
     }
 }
