proposed right section (incomplete)

--- a/styles/userprofilecss/userprofile01.module.scss
+++ b/styles/userprofilecss/userprofile01.module.scss
@@ -63,6 +63,50 @@
 .profile_right_wrap{
         flex: 70%;
         border: 5pt solid white;
-
+        .header {
+          padding: 5px;
+          text-align: left;
+          background: #2e2e2e;
+          color: white;
+          font-size: 18px;
+        }
     }
+}
+
+.profile_card {
+  box-sizing: border-box;
+
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+
+.row {margin: 0 -5px;}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+}
 }
