--- a/styles/homepage-comps/slider.module.scss
+++ b/styles/homepage-comps/slider.module.scss
@@ -1,20 +1,18 @@
 .root_box {
-    width: 20vw;
-    height: 100%;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    align-content: center;
-    overflow: hidden;
-    background-color: #20242B;
-    // opacity: 0.;
-
+  width: 20vw;
+  height: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-content: center;
+  overflow: hidden;
+  background-color: #20242b;
 }
 
 @media only screen and (max-width: 72rem) {
-    .root_box {
-        display: none;
-    }
+  .root_box {
+    display: none;
+  }
 }
 
 // #cd32fc
