--- a/styles/homepage-comps/bottomsect.module.scss
+++ b/styles/homepage-comps/bottomsect.module.scss
@@ -1,63 +1,64 @@
 .foot_wrap {
-    width: 100%;
-    height: 350pt;
-    display: flex;
-    
-    
-    bottom: 0px;
+  width: 100%;
+  height: 350pt;
+  display: flex;
+  
+  
+  bottom: 0px;
+  //border: 5pt solid orange;
+  overflow: hidden;
+
+  .foot_left_wrap {
+    flex:40%;
+  
+    //background-color: grey;
+    background-color: #1A1B1E;
     //border: 5pt solid orange;
-    overflow: hidden;
-  
-    .foot_left_wrap {
-      flex:40%;
-    
-      //background-color: grey;
-      background-color: #F0F8FF;
-      //border: 5pt solid orange;
-  
-      img {
-        display: flex;
-        width:75%;
-        padding: 10%;
-        justify-content: center;
-        
-      }
-  
-      .text_below_logo{
-        display: flex;
-        justify-content: center;
-        
-    
-      }
-    }
-  
-    .foot_right_wrap {
-      /*background-color: yellow;*/
-      background-color: #F0F8FF;
-      flex:60%;
-    //   border: 5pt solid orange;
-  
-  
-      .foot_menu_wrap {
-        display: grid;
-        width: 100%;
-        grid-template-columns: 100pt 100pt 100pt 100pt 100pt;
-        padding: 10%;
-        align-items: center;
-        justify-items: center;
-        /*background-color: green;*/
-        // border: 5pt solid orange;
-        background-color: #F0F8FF;
-        justify-content: center;
-       
-  
-        /*ul{
-          list-style-type: none;
-  
-        }*/
-  
-  
+
+    img {
+      display: flex;
+      width:75%;
+      padding: 10%;
+      justify-content: center;
       
     }
-  }}
+
+    .text_below_logo{
+      display: flex;
+      justify-content: center;
+      
   
+    }
+  }
+
+  .foot_right_wrap {
+    //background-color: yellow;
+    background-color: #1A1B1E;
+    flex:60%;
+    //border: 5pt solid orange;
+
+
+    .foot_menu_wrap {
+      display: grid;
+      width: 100%;
+      height: 100%;
+      grid-template-columns: 100pt 100pt 100pt 100pt 100pt;
+      padding: 10%;
+      align-items: center;
+      justify-items: center;
+      //background-color: green;
+      //border: 5pt solid orange;
+      background-color: #1A1B1E;
+      justify-content: center;
+     
+
+      ul{
+        list-style-type: none;
+        font-size: larger;
+
+      }
+
+
+    
+  }
+}}
